--- a/Evaluation_CoE_Apr_2023/package.json
+++ b/Evaluation_CoE_Apr_2023/package.json
@@ -9,5 +9,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.32.3"
+  },
+  "dependencies": {
+    "csv-parse": "^5.3.8"
   }
 }
